--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="website icon" href="images/logotipo.png" type="png" />
+    <link rel="icon" href="images/logotipo.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- Google fonts -->
@@ -21,14 +21,25 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
     <!-- BootstrapIcons -->
+    <!-- Scripts de JS -->
+    <script src="js/menu.js" defer></script>
 
     <title>Aerovia</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="interface">
         <section class="logo">
-          <img src="images/logotipo.png" alt=" Logotip´p do site" />
+          <img
+            class="logo-branca"
+            src="images/logotipo.png"
+            alt=" Logotipo do site"
+          />
+          <img
+            class="logo-preta"
+            src="images/logotipo_p.png"
+            alt=" Logotipo do site"
+          />
         </section>
 
         <section class="menu-desktop">
@@ -111,7 +122,7 @@
                 ><strong class="destaque">hotéis</strong>
               </h3>
               <p>
-                ospede-se nos lugares mais confortáveis e bem avaliados do
+                Hospede-se nos lugares mais confortáveis e bem avaliados do
                 mundo. Selecionamos hotéis que unem qualidade, localização
                 privilegiada e atendimento impecável para tornar sua viagem
                 ainda mais especial.
@@ -224,7 +235,68 @@
           </div>
         </div>
       </section>
+
+      <section class="contato">
+        <div class="interface">
+          <article class="txt-contato">
+            <h3>Fale agora com a <span>nossa equipe</span></h3>
+            <p>E solicite um orçamento que cabe no seu bolso</p>
+          </article>
+
+          <article class="icons-contato">
+            <a href="#">
+              <button>
+                <i class="bi bi-whatsapp"></i>
+                <p>Chamar no Whatsapp</p>
+              </button>
+            </a>
+            <a href="#">
+              <button>
+                <i class="bi bi-envelope-at"></i>
+                <p>Mandar e-mail</p>
+              </button>
+            </a>
+            <a href="#">
+              <button>
+                <i class="bi bi-telephone-fill"></i>
+                <p>Ligar</p>
+              </button>
+            </a>
+            <a href="#">
+              <button>
+                <i class="bi bi-ui-checks"></i>
+                <p>Formulário</p>
+              </button>
+            </a>
+          </article>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="interface">
+        <section class="top-footer">
+          <a href=""
+            ><button><i class="bi bi-instagram"></i></button
+          ></a>
+          <a href=""
+            ><button><i class="bi bi-linkedin"></i></button
+          ></a>
+          <a href="https://github.com/CaioSouza021?tab=repositories"
+            ><button><i class="bi bi-github"></i></button
+          ></a>
+        </section>
+
+        <section class="middle-footer">
+          <a href="#">Sobre nós</a>
+          <a href="#">Informações</a>
+          <a href="#">Política de privacidade</a>
+          <a href="">Suporte</a>
+        </section>
+
+        <section class="bottom-footer">
+          <p>Aerovia 2025 &copy; Todos os direitos reservados</p>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
