--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="images/logotipo.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" />
-
+    <link rel="stylesheet" href="css/responsive.css" media="screen" />
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+
     <!-- Google fonts -->
 
     <!-- BootstrapIcons -->
@@ -58,6 +59,22 @@
             <button>Contato</button>
           </a>
         </section>
+
+        <div class="btn-menu-mob" id="btn-menu-mob">
+          <div class="line-menumob-1"></div>
+          <div class="line-menumob-2"></div>
+        </div>
+
+        <section class="menu-mobile" id="menu-mobile">
+          <nav>
+            <ul>
+              <li><a href="#">início</a></li>
+              <li><a href="#">destinos</a></li>
+              <li><a href="#">hotéis</a></li>
+              <li><a href="#">passagens</a></li>
+            </ul>
+          </nav>
+        </section>
       </div>
     </header>
     <main>
@@ -98,11 +115,11 @@
           </article>
 
           <article class="itens-container">
-            <div class="img-itens">
+            <div class="img-itens item-1">
               <img src="images/carro.png" alt="" />
             </div>
 
-            <div class="txt-itens">
+            <div class="txt-itens item-2">
               <h3>
                 Os <strong class="titulo">melhores </strong
                 ><strong class="destaque">destinos</strong>
@@ -125,7 +142,7 @@
                 Hospede-se nos lugares mais confortáveis e bem avaliados do
                 mundo. Selecionamos hotéis que unem qualidade, localização
                 privilegiada e atendimento impecável para tornar sua viagem
-                ainda mais especial.
+                especial.
               </p>
             </div>
 
@@ -275,10 +292,12 @@
     <footer>
       <div class="interface">
         <section class="top-footer">
-          <a href=""
+          <a
+            href="https://www.instagram.com/eo_caiov/profilecard/?igsh=YTJzanI2bXFzdnNr"
             ><button><i class="bi bi-instagram"></i></button
           ></a>
-          <a href=""
+          <a
+            href="https://www.linkedin.com/in/caio-souza-2bb1592b7?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app "
             ><button><i class="bi bi-linkedin"></i></button
           ></a>
           <a href="https://github.com/CaioSouza021?tab=repositories"
