--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
             </div>
 
             <div class="img-itens">
-              <img src="images/aviao.png" alt="" />
+              <img src="images/aviao.png" alt="imagem-de-aviao" />
             </div>
           </article>
 
           <article class="itens-container">
             <div class="img-itens item-1">
-              <img src="images/carro.png" alt="" />
+              <img src="images/carro.png" alt="imagem-de-kombi" />
             </div>
 
             <div class="txt-itens item-2">
@@ -147,7 +147,7 @@
             </div>
 
             <div class="img-itens">
-              <img src="images/hoteis.png" alt="" />
+              <img src="images/hoteis.png" alt="imagem-de-hotel" />
             </div>
           </article>
         </div>
@@ -209,7 +209,10 @@
           <div class="instru">
             <article class="instru-box">
               <div class="img-instru">
-                <img src="images/atendimento-ao-cliente.png" alt="" />
+                <img
+                  src="images/atendimento-ao-cliente.png"
+                  alt="imagem-de-suporte"
+                />
               </div>
 
               <div class="txt-instru">
@@ -223,7 +226,7 @@
 
             <article class="instru-box">
               <div class="img-instru">
-                <img src="images/planejamento.png" alt="" />
+                <img src="images/planejamento.png" alt="imagem-de-mapa" />
               </div>
 
               <div class="txt-instru">
@@ -237,7 +240,7 @@
 
             <article class="instru-box">
               <div class="img-instru">
-                <img src="images/viagem.png" alt="" />
+                <img src="images/viagem.png" alt="imagem-de-viagem" />
               </div>
 
               <div class="txt-instru">
